@@ -101,7 +101,9 @@ function MsgYesNo( cMsg, cTitle, cIcon, fCallback ) {
 
 //----------------------------------------------------------------------------//
 
-function MsgServer( cUrl, oValues, fCallback ) {
+function MsgServer( cUrl, oValues, fCallback, cFormat ) {
+
+	cFormat	= (typeof cFormat ) == 'string' ? cFormat : 'json' ;
 
 	var cType 	= $.type( oValues )
 	var oPar 	= new Object()
@@ -142,8 +144,18 @@ function MsgServer( cUrl, oValues, fCallback ) {
 	$.post( cUrl, oPar )		
 		.done( function( data ) { 					
 
-			if ( typeof fCallback === "function") {					
-				fCallback.apply(null, [data] );				
+			if ( typeof fCallback === "function") {	
+			
+				if ( cFormat == 'json' ) {			
+
+					if ( jQuery.type( data ) == 'object' )	{																
+						fCallback.apply(null, [data] );	
+					} else
+						MsgError( data, 'Error MsgServer()' )
+					
+				} else {
+					fCallback.apply(null, [data] );				
+				}							
 			} 
 		})
 		.fail( function(data){ 
@@ -161,12 +173,15 @@ function MsgLoading( cMessage, cTitle, cIcon ) {
 	cIcon 		= (typeof cIcon ) == 'string' ? cIcon : '<i class="fas fa-sync fa-spin"></i>' ;
 
 	var dialog = bootbox.dialog({
-            title: cTitle,
-            message: '<p>' + cIcon + '&nbsp;'  + cMessage + '</p>',
-			animate: false,
-            //closeButton: false
-        }); 
+			title: cTitle,
+			message: '<p>' + cIcon + '&nbsp;&nbsp;'  + cMessage + '</p>',
+			animate: false,							
+			//closeButton: false
+		}); 
 
+	dialog.addClass("loading_center");
+	dialog.find("div.modal-content").addClass("loading_width");																
+		
 	return dialog
 }
 
@@ -700,6 +715,8 @@ function TWebUpload( cId, cUrl, callback, oData ) {
 	} 
 }
 
+
+//	-------------------------------------------------------------------------------------//
 
 //	-------------------------------------------------------------------------------------//
 
